RESOLVED FIXED14565
visibility:hidden property doesn't hide parts of file input element
https://bugs.webkit.org/show_bug.cgi?id=14565
Summary visibility:hidden property doesn't hide parts of file input element
Romain Bohdanowicz
Reported 2007-07-09 04:01:24 PDT
visibility:hidden property doesn't hide the "resizer" in textarea elements. "no file selected" is still visible for <input type="file"> elements. Here is an sample html : <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> <head> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> <title>WebKit Testcase</title> </head> <body> <form style="visibility:hidden;"> <input type="file" name="file_input" value="" id="file_input"> <textarea>textarea content</textarea> </form> </body> </html>
Attachments
testcase (468 bytes, text/html)
2007-07-09 04:02 PDT, Romain Bohdanowicz
no flags
Romain Bohdanowicz
Comment 1 2007-07-09 04:02:22 PDT
Created attachment 15447 [details] testcase
mitz
Comment 2 2007-07-09 04:09:55 PDT
I think the textarea part has been fixed already.
Romain Bohdanowicz
Comment 3 2007-07-09 05:23:10 PDT
(In reply to comment #2) > I think the textarea part has been fixed already. > Not fixed in build 24096.
Romain Bohdanowicz
Comment 4 2007-07-09 05:28:00 PDT
(In reply to comment #3) > (In reply to comment #2) > > I think the textarea part has been fixed already. > > > > Not fixed in build 24096. > Sorry you're right, fixed in 24096 but issue still apply for <input type="file"> elements.
David Kilzer (:ddkilzer)
Comment 5 2007-07-09 08:59:36 PDT
(In reply to comment #4) > Sorry you're right, fixed in 24096 but issue still apply for <input > type="file"> elements. Textarea issues were covered by Bug 14297. The file input issue is still valid. Confirmed with a local debug build of WebKit r24103 with Safari 3.0 (522.12) on Mac OS X 10.4.10 (8R218).
David Kilzer (:ddkilzer)
Comment 6 2007-07-09 09:00:10 PDT
Adele Peterson
Comment 7 2007-07-16 14:49:43 PDT
Committed revision 24327.
Note You need to log in before you can comment on or make changes to this bug.