LayoutTests:

Reviewed by Brady.

        Test for <rdar://problem/5321490> REGRESSION: visibility:hidden property doesn't hide parts of file input element
        http://bugs.webkit.org/show_bug.cgi?id=14565

        * fast/forms/hidden-input-file-expected.checksum: Added.
        * fast/forms/hidden-input-file-expected.png: Added.
        * fast/forms/hidden-input-file-expected.txt: Added.
        * fast/forms/hidden-input-file.html: Added.
        * fast/forms/hidden-listbox-expected.checksum
        * fast/forms/hidden-listbox-expected.png
        * fast/forms/hidden-listbox-expected.txt
        * fast/forms/hidden-listbox.html

WebCore:

        Reviewed by Brady.

        Fix for <rdar://problem/5321490> REGRESSION: visibility:hidden property doesn't hide parts of file input element and listbox
        http://bugs.webkit.org/show_bug.cgi?id=14565

        Tests:
        fast/forms/hidden-input-file.html
        fast/forms/hidden-listbox.html

        * rendering/RenderFileUploadControl.cpp: (WebCore::RenderFileUploadControl::paintObject):
        Only paint if the control is supposed to be visible.
        * rendering/RenderListBox.cpp: (WebCore::RenderListBox::paintObject):
        ditto.  We already had checks to prevent drawing the text that considered the option's style too, but if visibility: hidden
        was just set on the listbox then a lot of extra work was being done, and the scrollbar was drawing too.  This change fixes that.



Canonical link: https://commits.webkit.org/18987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24327 268f45cc-cd09-0410-ab3c-d52691b4dbfc